--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <h1>To-Do</h1>
       <form id="todo-form">
         <input type="text" placeholder="Tile..." name="todoTitle" id="todoTitle" />
-        <input type="text" placeholder="Due to..." name="todoDueto" id="todoDueto">
+        <input type="text" placeholder="Due to..." name="todoDueto" id="todoDueto" autocomplete="off">
         <textarea placeholder="Description..." name="todoDesc" id="todoDesc" ></textarea>
         <button type="submit">Add</button>
     </div>
